# SfmlStuff

./: CMakeLists.txt
src/: main.cpp
